tests/baselines/reference/stringLiteralsAssertionsInEqualityComparisons02.errors.txt
tests/cases/conformance/types/literal/stringLiteralsAssertionsInEqualityComparisons02.ts(3,9): error TS2365: Operator '===' cannot be applied to types '"foo"' and '"baz"'.
tests/cases/conformance/types/literal/stringLiteralsAssertionsInEqualityComparisons02.ts(5,9): error TS2365: Operator '==' cannot be applied to types 'string' and 'number'.
tests/cases/conformance/types/literal/stringLiteralsAssertionsInEqualityComparisons02.ts(5,19): error TS2352: Type 'string' cannot be converted to type 'number'.


==== tests/cases/conformance/types/literal/stringLiteralsAssertionsInEqualityComparisons02.ts (3 errors) ====
    type EnhancedString = string & { enhancements: any };
    
    var a = "foo" === "bar" as "baz";
            ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2365: Operator '===' cannot be applied to types '"foo"' and '"baz"'.
    var b = "foo" !== ("bar" as "foo");
    var c = "foo" == (<number>"bar");
            ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2365: Operator '==' cannot be applied to types 'string' and 'number'.
                      ~~~~~~~~~~~~~
!!! error TS2352: Type 'string' cannot be converted to type 'number'.
    var d = "foo" === ("bar" as EnhancedString);